--- a/admin-backend/src/main/resources/application.yml
+++ b/admin-backend/src/main/resources/application.yml
@@ -17,4 +17,7 @@ spring:
     url: jdbc:mysql://localhost:3306/example
 server:
   port: 8080
+mybatis-plus:
+  configuration:
+    map-underscore-to-camel-case: false
 
