--- a/admin-backend/src/main/resources/application.yml
+++ b/admin-backend/src/main/resources/application.yml
@@ -20,4 +20,9 @@ server:
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: false
+  global-config:
+    db-config:
+      logic-delete-field: isDelete
+      logic-delete-value: 1
+      logic-not-delete-value: 0
 
