--- a/admin-backend/src/main/resources/application.yml
+++ b/admin-backend/src/main/resources/application.yml
@@ -15,6 +15,9 @@ spring:
     username: root
     password: 123456
     url: jdbc:mysql://localhost:3306/example
+  # session 失效时间
+  session:
+    timeout: 86400
 server:
   port: 8080
 mybatis-plus:
